Upgrading to Scala 2.10.0